--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\PizzaholicsPrototype.Repositories\packages.config" />
   <repository path="..\PizzaholicsPrototype.Tests\packages.config" />
   <repository path="..\PizzaholicsPrototype\packages.config" />
 </repositories>
