Added Repository interfaces. Added Empty Repositories. Added Models & Reports.

--- a/PizzaholicsPrototype.Models/PizzaholicsPrototype.Models.csproj
+++ b/PizzaholicsPrototype.Models/PizzaholicsPrototype.Models.csproj
@@ -39,11 +39,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\Account.cs" />
+    <Compile Include="Models\Member.cs" />
+    <Compile Include="Models\Provider.cs" />
+    <Compile Include="Models\ServiceInfo.cs" />
+    <Compile Include="Models\ServiceProvided.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reports\WeeklyMemberServicesReport.cs" />
+    <Compile Include="Reports\WeeklyProviderEFFReport.cs" />
+    <Compile Include="Reports\WeeklyProviderReimbursementReport.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
