--- a/PizzaholicsPrototype.Repositories.Tests/PizzaholicsPrototype.Repositories.Tests.csproj
+++ b/PizzaholicsPrototype.Repositories.Tests/PizzaholicsPrototype.Repositories.Tests.csproj
@@ -53,6 +53,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\PizzaholicsPrototype.Models\PizzaholicsPrototype.Models.csproj">
+      <Project>{a73eb6e2-d1a9-437c-a765-0d465f66438f}</Project>
+      <Name>PizzaholicsPrototype.Models</Name>
+    </ProjectReference>
     <ProjectReference Include="..\PizzaholicsPrototype.Repositories\PizzaholicsPrototype.Repositories.csproj">
       <Project>{4e1dd3ef-7d1e-4c91-926c-cd13ad9c06b8}</Project>
       <Name>PizzaholicsPrototype.Repositories</Name>
@@ -64,6 +68,9 @@
     <Folder Include="ProvidersRepository\" />
     <Folder Include="ReportsRepository\" />
     <Folder Include="ServicesRepository\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
