--- a/PizzaholicsPrototype.Tests/PizzaholicsPrototype.WebAPI.Tests.csproj
+++ b/PizzaholicsPrototype.Tests/PizzaholicsPrototype.WebAPI.Tests.csproj
@@ -114,7 +114,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Controllers\ValuesControllerTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
@@ -127,6 +126,9 @@
       <Project>{FDFC3457-C9C3-44AF-99F5-E45FA597FE77}</Project>
       <Name>PizzaholicsPrototype.WebAPI</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Controllers\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
